--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{data.titulo}}</title>
-</head>
-<body>
-    <h1>{{data.encabezado}}</h1>
-    <p>
-        Bienvenido o bienvenida a este curso de CódigoFacilito
-    </p>
-</body>
-</html>
+{% extends './base.html' %}
+
+{% block contenido %}
+<p>
+    Bienvenido o bienvenida a este curso de CódigoFacilito
+</p>
+{% endblock %}
